@startuml TP2

title Diagrama de Clases Cajú

hide circle
skinparam classAttributeIconSize 0
skinparam roundcorner 25
skinparam sequenceArrowThickness 2
skinparam classFontSize 20

skinparam class {
BackgroundColor FloralWhite
ArrowColor DimGray
BorderColor DimGray
}

class Panel{
       - pregunta: Pregunta
       - jugadores: HashMap<String, Jugador>
       - fabricaPreguntas: FabricaPreguntas
       + crearPregunta(String, String, set<Steing>
       + crearJugador(String)
       + hacerPregunta(String, set<String>)
       + pedirPuntos(String): Int
}

class FabricaPreguntas{
       + crearPregunta(String, String, set<String>): Pregunta
}

class Jugador{
        - nombre: String
        - puntos: Int
        + Jugador(String)
        + pedirPuntos(): Int
        + asignarPuntos(Int)
}


abstract class Pregunta{
        - opcionesCorrectas: Collection<String>
        - textoPregunta: String
        + compararRespuestas(): Int
}

class PreguntaClasica{
        + PreguntaClasica(String, Collection<String>)
        + compararRespuestas(Collection<String>): Int
}

class PreguntaConPenalidad{
        + PreguntaConPenalidad(String, set<String>)
        + compararRespuestas(Collection<String>): Integer
}

class PreguntaConPuntajeParcial{
        + PreguntaConPuntajeParcial(String, set<String>)
        + compararRespuestas(Collection<String>): Int
}

Panel o--> Jugador
Panel o-- Pregunta
Panel o-left-> FabricaPreguntas
FabricaPreguntas ..> Pregunta
PreguntaClasica -up-|> Pregunta
PreguntaConPenalidad -up-|> Pregunta
PreguntaConPuntajeParcial -up-|> Pregunta

@enduml